--- a/src/main/java/GUI/MainGUI.form
+++ b/src/main/java/GUI/MainGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Client.MainGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.MainGUI">
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
@@ -23,7 +23,7 @@
           </component>
         </children>
       </scrollpane>
-      <component id="ff869" class="javax.swing.JButton" binding="sendMessage">
+      <component id="ff869" class="javax.swing.JButton" binding="btn_sendMessage">
         <constraints>
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -63,7 +63,7 @@
           <text value="Message:"/>
         </properties>
       </component>
-      <component id="b8ea" class="javax.swing.JButton" binding="anmelden">
+      <component id="b8ea" class="javax.swing.JButton" binding="btn_anmelden">
         <constraints>
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
